Fix broken layout, canvas and property bar; rewirte side-bar-switcher component

--- a/apps/app/src/app/components/editor/editor.component.scss
+++ b/apps/app/src/app/components/editor/editor.component.scss
@@ -1,9 +1,31 @@
 :host {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
   width: 100%;
   height: 100%;
+}
+
+.editor-main-layout {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.editor-property-bar {
+  width: 320px;
+  min-width: 290px;
+  max-width: 350px;
+  background: none;
+  padding: 0;
+  z-index: 2;
+}
+
+.editor-canvas-area {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 2rem 0;
 }
 
 .canvas-wrapper {
@@ -13,7 +35,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
+  padding: 0;
 }
 
 .editor-toolbar {
