--- a/apps/app/src/app/components/property-bar/property-bar.component.scss
+++ b/apps/app/src/app/components/property-bar/property-bar.component.scss
@@ -1,13 +1,3 @@
-.main-panel {
-  position: fixed;
-  left: 0.5rem;
-  top: 6.5rem;
-  width: 290px;
-  height: calc(100vh - 4rem - 1rem);
-  overflow-y: auto;
-  box-sizing: border-box;
-}
-
 .property-section {
   margin-bottom: 1.5rem;
 
